made sure the correct spacing between content and mitigation

--- a/src/components/AlertCard/styles.module.css
+++ b/src/components/AlertCard/styles.module.css
@@ -124,6 +124,7 @@
 }
 .contentParagraph {
   margin-left: 1.375rem;
+  margin-right: 1.875rem;
 }
 .bold {
   font-weight: 700;
